--- a/.github/workflows/test-regresion.yml
+++ b/.github/workflows/test-regresion.yml
@@ -28,4 +28,5 @@ jobs:
       - name: Ejecutar pruebas
         run: |
           source venv/bin/activate
+          export PYTHONPATH="${{ github.workspace }}"
           pytest tests
